# Embedded-linux

./: README.md  script_exercise.sh
Task2_BinarySearch/: BinarySearch.c  a.out
calculator/: main.c
calculator/header/: file.h
calculator/source_files/: addition.c  division.c  subtraction.c
task1_adminlinux/: script.sh
task3_adminlinux/: task3.sh
task4_adminlinux/: task4.sh
task5_embeddedlinux/sourcefiles/: CMakeLists.txt  multiplication.c
